bug fix on navbar occurring on safari/iphone5S

--- a/css/index.css
+++ b/css/index.css
@@ -112,7 +112,7 @@
 }
 @media screen and (max-width:767px) {
   #logo {
-    /* position:fixed; */
+    left: calc(50% - 35.719px);
   }
   /* #welcomehome {
     height: calc(100vh - 48px);
